force-app/main/default/objects/eCard_Open_Discrepancy__x/eCard_Open_Discrepancy__x.object-meta.xml
<CustomObject>
    <description>dw_view_ecard$ecard_open_discrepancy</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view_ecard$ecard_open_discrepancy</externalName>
    <label>eCard_Open_Discrepancy</label>
    <pluralLabel>eCard_Open_Discrepancies</pluralLabel>
</CustomObject>