force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/AC_System_PDI__c.field-meta.xml
<CustomField>
    <fullName>AC_System_PDI__c</fullName>
    <description>AC_System_PDI</description>
    <externalDeveloperName>AC_System_PDI</externalDeveloperName>
    <label>AC_System_PDI</label>
    <length>200</length>
    <type>Text</type>
</CustomField>