force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Actual_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Delivery_Date__c</fullName>
    <description>Actual_Delivery_Date</description>
    <externalDeveloperName>Actual_Delivery_Date</externalDeveloperName>
    <label>Actual_Delivery_Date</label>
    <type>Date</type>
</CustomField>