force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Assigend_QC__c.field-meta.xml
<CustomField>
    <fullName>Assigend_QC__c</fullName>
    <description>Assigend_QC</description>
    <externalDeveloperName>Assigend_QC</externalDeveloperName>
    <label>Assigend_QC</label>
    <length>254</length>
    <type>Text</type>
</CustomField>