force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Buildstation__c.field-meta.xml
<CustomField>
    <fullName>Buildstation__c</fullName>
    <description>Buildstation</description>
    <externalDeveloperName>Buildstation</externalDeveloperName>
    <label>Buildstation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>