force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Bus_No__c.field-meta.xml
<CustomField>
    <fullName>Bus_No__c</fullName>
    <description>Bus_No</description>
    <externalDeveloperName>Bus_No</externalDeveloperName>
    <label>Bus_No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>