force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Coach_Number__c.field-meta.xml
<CustomField>
    <fullName>Coach_Number__c</fullName>
    <description>Coach_Number</description>
    <externalDeveloperName>Coach_Number</externalDeveloperName>
    <label>Coach_Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>