force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Coach_Unladen_Weight__c.field-meta.xml
<CustomField>
    <fullName>Coach_Unladen_Weight__c</fullName>
    <description>Coach_Unladen_Weight</description>
    <externalDeveloperName>Coach_Unladen_Weight</externalDeveloperName>
    <label>Coach_Unladen_Weight</label>
    <length>200</length>
    <type>Text</type>
</CustomField>