force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Completed_Date</description>
    <externalDeveloperName>Completed_Date</externalDeveloperName>
    <label>Completed_Date</label>
    <type>Date</type>
</CustomField>