force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>Component</description>
    <externalDeveloperName>Component</externalDeveloperName>
    <label>Component</label>
    <length>200</length>
    <type>Text</type>
</CustomField>