force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <description>Created_By</description>
    <externalDeveloperName>Created_By</externalDeveloperName>
    <label>Created_By</label>
    <length>254</length>
    <type>Text</type>
</CustomField>