force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy__c</fullName>
    <description>Discrepancy</description>
    <externalDeveloperName>Discrepancy</externalDeveloperName>
    <label>Discrepancy</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>