force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Discrepancy_Log_Number__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Log_Number__c</fullName>
    <description>Discrepancy_Log_Number</description>
    <externalDeveloperName>Discrepancy_Log_Number</externalDeveloperName>
    <label>Discrepancy_Log_Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>