force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Discrepancy_Status__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Status__c</fullName>
    <description>Discrepancy_Status</description>
    <externalDeveloperName>Discrepancy_Status</externalDeveloperName>
    <label>Discrepancy_Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>