force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Discrepancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Type__c</fullName>
    <description>Discrepancy_Type</description>
    <externalDeveloperName>Discrepancy_Type</externalDeveloperName>
    <label>Discrepancy_Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>