force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Foreman1__c.field-meta.xml
<CustomField>
    <fullName>Foreman1__c</fullName>
    <description>Foreman1</description>
    <externalDeveloperName>Foreman1</externalDeveloperName>
    <label>Foreman1</label>
    <length>254</length>
    <type>Text</type>
</CustomField>