force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Foreman3__c.field-meta.xml
<CustomField>
    <fullName>Foreman3__c</fullName>
    <description>Foreman3</description>
    <externalDeveloperName>Foreman3</externalDeveloperName>
    <label>Foreman3</label>
    <length>254</length>
    <type>Text</type>
</CustomField>