force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Foreman5__c.field-meta.xml
<CustomField>
    <fullName>Foreman5__c</fullName>
    <description>Foreman5</description>
    <externalDeveloperName>Foreman5</externalDeveloperName>
    <label>Foreman5</label>
    <length>254</length>
    <type>Text</type>
</CustomField>