force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Has_Any_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Has_Any_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has_Any_Attachment</description>
    <externalDeveloperName>Has_Any_Attachment</externalDeveloperName>
    <label>Has_Any_Attachment</label>
    <type>Checkbox</type>
</CustomField>