force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date__c</fullName>
    <description>Modified_Date</description>
    <externalDeveloperName>Modified_Date</externalDeveloperName>
    <label>Modified_Date</label>
    <type>DateTime</type>
</CustomField>