force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Odometer__c.field-meta.xml
<CustomField>
    <fullName>Odometer__c</fullName>
    <description>Odometer</description>
    <externalDeveloperName>Odometer</externalDeveloperName>
    <label>Odometer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>