force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Operation</description>
    <externalDeveloperName>Operation</externalDeveloperName>
    <label>Operation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>