force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Raised_Date__c.field-meta.xml
<CustomField>
    <fullName>Raised_Date__c</fullName>
    <description>Raised_Date</description>
    <externalDeveloperName>Raised_Date</externalDeveloperName>
    <label>Raised_Date</label>
    <type>DateTime</type>
</CustomField>