force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start_Date</description>
    <externalDeveloperName>Start_Date</externalDeveloperName>
    <label>Start_Date</label>
    <type>Date</type>
</CustomField>