force-app/main/default/objects/eCard_Open_Discrepancy__x/fields/Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Verified_Date__c</fullName>
    <description>Verified_Date</description>
    <externalDeveloperName>Verified_Date</externalDeveloperName>
    <label>Verified_Date</label>
    <type>DateTime</type>
</CustomField>